change automation file
Change some code in the automation script file. Placed it in the scripts folder.

--- a/scripts/automation_script.ipynb
+++ b/scripts/automation_script.ipynb
@@ -109,17 +109,20 @@
     "\n",
     "# Function to send an alert email\n",
     "def send_alert(subject, body):\n",
+    "\n",
+    "    email = 'aneeshganesh8@gmail.com' # The email address for gmail\n",
+    "    app_password = 'bkdv bmeo bnjg omzp' # The app password for logging into gmail\n",
     "    \n",
     "    # Set up the email message (body, subject, from, to) \n",
     "    msg = EmailMessage()\n",
     "    msg.set_content(body)\n",
     "    msg['Subject'] = subject\n",
-    "    msg['From'] = 'aneeshganesh8@gmail.com'\n",
-    "    msg['To'] = 'aneeshganesh8@gmail.com'\n",
+    "    msg['From'] = email\n",
+    "    msg['To'] = email\n",
     "\n",
     "    # Send the email\n",
     "    with smtplib.SMTP_SSL('smtp.gmail.com', 465) as smtp:\n",
-    "        smtp.login('aneeshganesh8@gmail.com', 'bkdv bmeo bnjg omzp') # Login with email and app password\n",
+    "        smtp.login(email, app_password) # Login with email and app password\n",
     "        smtp.send_message(msg)\n",
     "\n",
     "# Send an alert when CPU usage is high\n",
