attach the actual log
Attach the actual log so that the summary report is reproducible.

--- a/scripts/automation_project.ipynb
+++ b/scripts/automation_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "    print(\"Summary report generated successfully!\")\n",
     "\n",
     "# The actual log file \n",
-    "log_file_path = '/var/log/auth.log'\n",
+    "log_file_path = 'auth.log'\n",
     "read_log_file(log_file_path)"
    ]
   },
@@ -59,8 +59,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU Usage: 87.8%\n",
-      "Memory Usage: 43.2%\n",
+      "CPU Usage: 50.5%\n",
+      "Memory Usage: 48.0%\n",
       "\n",
       "Performance log generated successfully!\n"
      ]
@@ -106,12 +106,13 @@
    "source": [
     "import smtplib\n",
     "from email.message import EmailMessage\n",
+    "from ssl import create_default_context\n",
     "\n",
     "# Function to send an alert email\n",
     "def send_alert(subject, body):\n",
     "\n",
-    "    email = 'aneeshganesh8@gmail.com' # The email address for gmail\n",
-    "    app_password = 'bkdv bmeo bnjg omzp' # The app password for logging into gmail\n",
+    "    email = 'aneeshganesh8@gmail.com' # email address\n",
+    "    app_password = 'bkdv bmeo bnjg omzp' # app password for gmail\n",
     "    \n",
     "    # Set up the email message (body, subject, from, to) \n",
     "    msg = EmailMessage()\n",
@@ -121,7 +122,8 @@
     "    msg['To'] = email\n",
     "\n",
     "    # Send the email\n",
-    "    with smtplib.SMTP_SSL('smtp.gmail.com', 465) as smtp:\n",
+    "    with smtplib.SMTP('smtp.gmail.com', 587) as smtp:\n",
+    "        smtp.starttls(context=create_default_context())\n",
     "        smtp.login(email, app_password) # Login with email and app password\n",
     "        smtp.send_message(msg)\n",
     "\n",
