--- a/scripts/automation_project.ipynb
+++ b/scripts/automation_project.ipynb
@@ -122,8 +122,7 @@
     "    msg['To'] = email\n",
     "\n",
     "    # Send the email\n",
-    "    with smtplib.SMTP('smtp.gmail.com', 587) as smtp:\n",
-    "        smtp.starttls(context=create_default_context())\n",
+    "    with smtplib.SMTP_SSL('smtp.gmail.com', 465) as smtp:\n",
     "        smtp.login(email, app_password) # Login with email and app password\n",
     "        smtp.send_message(msg)\n",
     "\n",
