reupdate the scripts
Re-update the scripts to:
1. use demo gmail account
2. correct the directories

--- a/Documentation/automation_project.ipynb
+++ b/Documentation/automation_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,8 +107,8 @@
     "import smtplib\n",
     "from email.message import EmailMessage\n",
     "\n",
-    "email = 'aneeshganesh8@gmail.com' # email address\n",
-    "app_password = 'bkdv bmeo bnjg omzp' # app password for gmail\n",
+    "email = 'cyse120demo@gmail.com' # demo gmail address\n",
+    "app_password = 'dlqu tfuq hsrz exff' # app password for gmail\n",
     "\n",
     "# Function to send an alert email\n",
     "def send_alert(subject, body):\n",
