update the scripts
- Correct some errors

--- a/Documentation/automation_project.ipynb
+++ b/Documentation/automation_project.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +69,11 @@
    "source": [
     "import psutil\n",
     "\n",
-    "# Get CPU usage\n",
+    "# Get and print CPU usage\n",
     "cpu_usage = psutil.cpu_percent(interval=1)\n",
     "print(f\"CPU Usage: {cpu_usage}%\")\n",
     "\n",
-    "# Get Memory usage\n",
+    "# Get and print Memory usage\n",
     "memory_info = psutil.virtual_memory()\n",
     "print(f\"Memory Usage: {memory_info.percent}%\\n\")\n",
     "\n",
